# roboplan

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  docker-compose.yaml  package.xml  pixi.toml
.docker/: Dockerfile  entrypoint.sh
.docker/ros/: Dockerfile
.docker/ubuntu/: Dockerfile  entrypoint.sh
.github/workflows/: build_and_test.yml  format.yml
benchmarks/: test_benchmark_rrt.py
bindings/: CMakeLists.txt  COLCON_IGNORE  README.md  package.xml  pyproject.toml
bindings/examples/: common.py  example_dual_arm.py  example_ik.py  example_rrt.py  example_scene.py  test_scene.py
bindings/src/: roboplan_ext.cpp
bindings/src/modules/: core.cpp  optimal_ik.cpp  simple_ik.cpp
bindings/src/roboplan/: __init__.py  viser_visualizer.py  visualization.py
bindings/src/roboplan/roboplan_ext/: README.md  __init__.pyi  core.pyi  example_models.pyi  optimal_ik.pyi  rrt.pyi  simple_ik.pyi  toppra.pyi
bindings/test/: test_import.py  test_rrt.py  test_scene.py
cmake/: roboplanConfig.cmake.in
docs/: README.md  python_docs_requirements.txt
docs/source/: api_cpp.rst  api_py.rst  conf.py  design.rst  getting_started.rst  index.rst  project_ideas.rst
examples/: test_scene.cpp
include/roboplan/: scene.hpp  types.hpp  utils.hpp
roboplan/: CMakeLists.txt  package.xml
roboplan/cmake/: roboplanConfig.cmake.in
roboplan/docs/: Doxyfile
roboplan/include/roboplan/core/: path_utils.hpp  scene.hpp  types.hpp
roboplan/src/core/: path_utils.cpp  scene.cpp  types.cpp
roboplan/test/: CMakeLists.txt  test_joints.cpp  test_path_utils.cpp  test_scene.cpp  test_types.cpp
roboplan_example_models/: CMakeLists.txt  package.xml
roboplan_example_models/docs/: Doxyfile
roboplan_example_models/models/franka_robot_model/: fr3.xacro
roboplan_example_models/models/kinova_robot_model/: kinova_robotiq.urdf
roboplan_example_models/models/ur_robot_model/: ur5_gripper.urdf
roboplan_examples/: CMakeLists.txt  package.xml
roboplan_examples/cpp/: example_ik.cpp  example_oink.cpp
roboplan_examples/examples/: test_scene.cpp
roboplan_examples/python/: example_ik.py  example_oink.py
roboplan_examples/ur_robot_model/: ur5_gripper.urdf
roboplan_oink/: CMakeLists.txt  package.xml
roboplan_oink/include/roboplan_oink/: optimal_ik.hpp
roboplan_oink/include/roboplan_oink/tasks/: frame.hpp
roboplan_oink/src/: optimal_ik.cpp
roboplan_oink/src/tasks/: frame.cpp
roboplan_oink/test/: test_oink.cpp
roboplan_oink/test/tasks/: test_frame_task.cpp
roboplan_rrt/: CMakeLists.txt  package.xml
roboplan_rrt/docs/: Doxyfile
roboplan_rrt/test/: CMakeLists.txt  test_rrt.cpp
roboplan_simple_ik/: CMakeLists.txt  package.xml
roboplan_simple_ik/docs/: Doxyfile
roboplan_simple_ik/include/roboplan_simple_ik/: simple_ik.hpp
roboplan_simple_ik/src/: simple_ik.cpp
roboplan_toppra/: CMakeLists.txt  package.xml
roboplan_toppra/docs/: Doxyfile
roboplan_toppra/test/: CMakeLists.txt  test_toppra.cpp
scripts/: build_cmake.bash  run_tests.bash
src/: scene.cpp  test_pinocchio.cpp  utils.cpp
