<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboplan</name>
  <version>0.0.0</version>
  <description>Modern and performant motion planning library based on Pinocchio.</description>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>pinocchio</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>