cmake_minimum_required(VERSION 3.22)

project(roboplan_bindings LANGUAGES CXX)

if (NOT SKBUILD)
  message(WARNING "\
  This CMake file is meant to be executed using 'scikit-build'. Running
  it directly will almost certainly not produce the desired result. If
  you are a user trying to install this package, please use the command
  below, which will install all necessary build dependencies, compile
  the package in an isolated environment, and then install it.
  =====================================================================
   $ pip install .
  =====================================================================
  If you are a software developer, and this is your own package, then
  it is usually much more efficient to install the build dependencies
  in your environment once and use the following command that avoids
  a costly creation of a new virtual environment at every compilation:
  =====================================================================
   $ pip install nanobind scikit-build-core[pyproject]
   $ pip install --no-build-isolation -ve .
  =====================================================================
  You may optionally add -Ceditable.rebuild=true to auto-rebuild when
  the package is imported. Otherwise, you need to re-run the above
  after editing C++ files.")
endif()

find_package(Python
  REQUIRED COMPONENTS Interpreter Development.Module
  OPTIONAL_COMPONENTS Development.SABIModule)

find_package(nanobind CONFIG REQUIRED)
find_package(roboplan REQUIRED)
find_package(roboplan_example_models REQUIRED)
find_package(roboplan_simple_ik REQUIRED)

# We are now ready to compile the actual extension module
nanobind_add_module(
  roboplan
  STABLE_ABI
  NB_STATIC
  src/roboplan_ext.cpp
)
target_link_libraries(roboplan PRIVATE
  roboplan::roboplan
  roboplan_example_models::roboplan_example_models
  roboplan_simple_ik::roboplan_simple_ik
)

# Install directive for scikit-build-core
install(TARGETS roboplan LIBRARY DESTINATION roboplan)
