[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "roboplan"
version = "0.0.0"
description = "Modern and performant motion planning library based on Pinocchio."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/sea-bass/roboplan"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
